[package]
name = "async-proxy"
version = "0.1.0"
authors = ["TonyGraim <tonygraim@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"

[dependencies.tokio]
version = "0.2"
features = ["tcp", "io-util", "time"]

[dev-dependencies]
clap = "2.33.1"
ansi_term = "0.12.1"

[dev-dependencies.tokio]
version = "0.2"
features = ["macros"]