[package]
name = "async-proxy"
version = "0.2.4"
authors = ["TonyGraim <tonygraim@gmail.com>"]
edition = "2018"
description = "An asyncronous implementation of proxy clients"
license = "MIT"
repository = "https://github.com/TonyGraim/async-proxy"

[dependencies]
async-trait = "0.1"
byteorder = "1.3.4"
webpki = "0.21.3"

[dependencies.tokio]
version = "0.2"
features = ["tcp", "io-util", "time"]

[dev-dependencies]
clap = "2.33.1"
ansi_term = "0.12.1"

[dev-dependencies.tokio]
version = "0.2"
features = ["macros"]